Movement Overhaul without test updates
Updated to use GameContext.Record as argument for movement. Replaced old references with new Reference class. Updated all pieces to use new Reference and context change. Updated ThreatMap to no longer refresh itself. TESTS ARE EXPECTED TO BE BROKEN.